syntax = "proto3";
package route_forecast;

service RouteForecast{
  rpc GetRouteWithForecast (RouteWithForecastRequest) returns (RouteWithForecastResponse);
}

message Step{
  double distance = 1;
  double dration = 2;
  int64 type_field = 3;
  string instruction = 4;
  string name = 5;
  repeated int64 way_points = 6;
}

message Coordinate{
  double longitude = 1;
  double latitude = 2;
}

message RouteWithForecastRequest{
  repeated Coordinate coordinates = 1;
  double number_of_forecasts = 2;
}

message Forecast {
  Coordinate position = 1;
  double air_temperature = 2;
  string symbol_code = 3;
}

message RouteWithForecastResponse {
  repeated Forecast forecasts = 1;
  repeated Step steps = 2;
  repeated Coordinate coords = 3;
}
